--- a/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
+++ b/lostAndFind-client/src/app/pages/mod-profile/mod-profile.component.html
@@ -68,7 +68,7 @@
       <div class="container bootstrap snippet">
         <div class="row">
           <div class="col-sm-10">
-            <h1>User name</h1>
+            <h1>Profile</h1>
           </div>
           <div class="col-sm-2"><a href="/users" class="pull-right"><img title="profile image"
                 class="img-circle img-responsive"
@@ -82,7 +82,7 @@
             <div class="text-center">
               <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
                 alt="avatar">
-              <h6>Upload a different photo...</h6>
+              <h6>Upload a photo...</h6>
               <input type="file" class="text-center center-block file-upload">
             </div>
             <br>
@@ -105,105 +105,15 @@
                   <div class="form-group">
 
                     <div class="col-xs-6">
-                      <label for="first_name">
-                        <h4>First name</h4>
-                      </label>
-                      <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name"
-                        title="enter your first name if any.">
+                        <label for="off_id">
+                          <h4>Officer ID</h4>
+                        </label>
+                        <input type="text" class="form-control" name="off-id" id="off-id" placeholder="ID"
+                          title="enter your first name if any.">
+                      </div>
                     </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="last_name">
-                        <h4>Last name</h4>
-                      </label>
-                      <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name"
-                        title="enter your last name if any.">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="phone">
-                        <h4>Phone</h4>
-                      </label>
-                      <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone"
-                        title="enter your phone number if any.">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="col-xs-6">
-                      <label for="mobile">
-                        <h4>Mobile</h4>
-                      </label>
-                      <input type="text" class="form-control" name="mobile" id="mobile"
-                        placeholder="enter mobile number" title="enter your mobile number if any.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="email">
-                        <h4>Email</h4>
-                      </label>
-                      <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com"
-                        title="enter your email.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="email">
-                        <h4>Location</h4>
-                      </label>
-                      <input type="email" class="form-control" id="location" placeholder="somewhere"
-                        title="enter a location">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="password">
-                        <h4>Password</h4>
-                      </label>
-                      <input type="password" class="form-control" name="password" id="password" placeholder="password"
-                        title="enter your password.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="password2">
-                        <h4>Verify</h4>
-                      </label>
-                      <input type="password" class="form-control" name="password2" id="password2"
-                        placeholder="password2" title="enter your password2.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-xs-12">
-                      <br>
-                      <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i>
-                        Save</button>
-                      <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                    </div>
-                  </div>
-                </form>
-
-                <hr>
-
-              </div>
-              <!--/tab-pane-->
-              <div class="tab-pane" id="messages">
-
-                <h2></h2>
-
-                <hr>
-                <form class="form" action="##" method="post" id="registrationForm">
-                  <div class="form-group">
+                    <div class="form-group">
+  
 
                     <div class="col-xs-6">
                       <label for="first_name">
@@ -227,11 +137,16 @@
                   <div class="form-group">
 
                     <div class="col-xs-6">
-                      <label for="phone">
-                        <h4>Phone</h4>
+                      <label for="station">
+                        <h4>Police Station</h4>
                       </label>
-                      <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone"
-                        title="enter your phone number if any.">
+                      <select name="Police Station" class="form-control" name="station" id="station" placeholder="Police Station">
+                          
+                            <option value="southern">Southern</option>
+                            <option value="Western">Western</option>
+                            <option value="centrel">Centrel</option>
+                            <option value="southEast">SouthEast</option>
+                        </select>
                     </div>
                   </div>
 
@@ -240,8 +155,8 @@
                       <label for="mobile">
                         <h4>Mobile</h4>
                       </label>
-                      <input type="text" class="form-control" name="mobile" id="mobile"
-                        placeholder="enter mobile number" title="enter your mobile number if any.">
+                      <input type="tel" class="form-control" name="mobile" id="mobile"
+                        placeholder="enter mobile number">
                     </div>
                   </div>
                   <div class="form-group">
@@ -254,16 +169,7 @@
                         title="enter your email.">
                     </div>
                   </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="email">
-                        <h4>Location</h4>
-                      </label>
-                      <input type="email" class="form-control" id="location" placeholder="somewhere"
-                        title="enter a location">
-                    </div>
-                  </div>
+                  
                   <div class="form-group">
 
                     <div class="col-xs-6">
@@ -281,117 +187,24 @@
                         <h4>Verify</h4>
                       </label>
                       <input type="password" class="form-control" name="password2" id="password2"
-                        placeholder="password2" title="enter your password2.">
+                        placeholder="password" title="enter your password2.">
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="col-xs-12">
                       <br>
                       <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i>
-                        Save</button>
-                      <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                        Edit & Save</button>
+                      <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Cancel</button>
                     </div>
                   </div>
                 </form>
 
+                
               </div>
               <!--/tab-pane-->
               <div class="tab-pane" id="settings">
 
-
-                <hr>
-                <form class="form" action="##" method="post" id="registrationForm">
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="first_name">
-                        <h4>First name</h4>
-                      </label>
-                      <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name"
-                        title="enter your first name if any.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="last_name">
-                        <h4>Last name</h4>
-                      </label>
-                      <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name"
-                        title="enter your last name if any.">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="phone">
-                        <h4>Phone</h4>
-                      </label>
-                      <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone"
-                        title="enter your phone number if any.">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="col-xs-6">
-                      <label for="mobile">
-                        <h4>Mobile</h4>
-                      </label>
-                      <input type="text" class="form-control" name="mobile" id="mobile"
-                        placeholder="enter mobile number" title="enter your mobile number if any.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="email">
-                        <h4>Email</h4>
-                      </label>
-                      <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com"
-                        title="enter your email.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="email">
-                        <h4>Location</h4>
-                      </label>
-                      <input type="email" class="form-control" id="location" placeholder="somewhere"
-                        title="enter a location">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="password">
-                        <h4>Password</h4>
-                      </label>
-                      <input type="password" class="form-control" name="password" id="password" placeholder="password"
-                        title="enter your password.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-
-                    <div class="col-xs-6">
-                      <label for="password2">
-                        <h4>Verify</h4>
-                      </label>
-                      <input type="password" class="form-control" name="password2" id="password2"
-                        placeholder="password2" title="enter your password2.">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-xs-12">
-                      <br>
-                      <button class="btn btn-lg btn-success pull-right" type="submit"><i
-                          class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                      <!--<button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>-->
-                    </div>
-                  </div>
-                </form>
-              </div>
 
             </div>
             <!--/tab-pane-->
