--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -56,7 +56,7 @@
             <li>
               <a href [routerLink]="'/mod_profile'">
                 <i class="fa fa-calendar"></i>
-                <span>Edit Profile</span>
+                <span>Edit profile</span>
               </a>
             </li>
             <li>
@@ -91,86 +91,14 @@
     <!-- sidebar-wrapper  -->
     <main class="page-content">
       <div class="container-fluid">
-        <h2>User Dashboard</h2>
+        <h2>Moderator Dashboard</h2>
         <hr>
         <div class="row">
           
 
         </div>
-        <h5>More templates</h5>
-        <hr>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-              <img
-                src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
-                class="card-img-top rounded-0" alt="Angular pro sidebar">
-              <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
-                
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-              <img
-                src="https://user-images.githubusercontent.com/25878302/58369258-33f20900-7ef8-11e9-8ff3-b277cb7ed7b4.PNG"
-                class="card-img-top rounded-0" alt="Angular pro sidebar">
-              <div class="card-body text-center">
-                <h6 class="card-title">Angular Dashboard</h6>
-                
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-              <img
-                src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
-                class="card-img-top rounded-0" alt="Angular pro sidebar">
-              <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
-               
-              </div>
-            </div>
-          </div>
-
-          
-          
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-              <img
-              src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
-              class="card-img-top rounded-0" alt="Angular pro sidebar">
-
-              <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-              <img
-              src="https://user-images.githubusercontent.com/25878302/58369568-a49b2480-7efc-11e9-9ca9-2be44afacda1.png"
-              class="card-img-top rounded-0" alt="Angular pro sidebar">
-
-              <div class="card-body text-center">
-                <h6 class="card-title">User Profile</h6>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="card rounded-0 p-0 shadow-sm">
-
-            </div>
-          </div>
-
-
-
-        </div>
-        <hr>
+        
+ 
 
         <footer class="text-center">
           <div class="mb-2">
