--- a/lostAndFind-client/src/app/components/complain/complain.component.html
+++ b/lostAndFind-client/src/app/components/complain/complain.component.html
@@ -23,9 +23,9 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-          <h3 class="register-heading">Lost Item</h3>
+          <h3 class="register-heading">Complain</h3>
 
-          <form (submit)="onLostPostSubmit()" [formGroup]="lostForm">
+          <form (submit)="onComplainSubmit()" [formGroup]="complainForm">
             <div class="row register-form">
 
               <div class="col-md-6">
@@ -34,9 +34,10 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fa fa-id-card"></i></span>
                   </div>
-                  <input name="location" type="text" class="form-control" formControlName="location" placeholder="location"
-                    [ngClass]="{'is-invalid': (location.touched || location.dirty) && location.invalid }">
-                  <div class="invalid-feedback" *ngIf="(location.touched || location.dirty) && location.invalid">
+                  <input name="police_station" type="text" class="form-control" formControlName="police_station"
+                    placeholder="location"
+                    [ngClass]="{'is-invalid': (police_station.touched || police_station.dirty) && police_station.invalid }">
+                  <div class="invalid-feedback" *ngIf="(police_station.touched || police_station.dirty) && police_station.invalid">
                     Enter Location name.
                   </div>
                 </div>
@@ -48,7 +49,8 @@
                   <textarea class="form-control" name="description" formControlName="description" type="text"
                     id="exampleFormControlTextarea1" rows="3" placeholder="Lost item Details"
                     [ngClass]="{'is-invalid': (description.touched || description.dirty) && description.invalid }"></textarea>
-                  <div class="invalid-feedback" *ngIf="(description.touched || description.dirty) && description.invalid">
+                  <div class="invalid-feedback"
+                    *ngIf="(description.touched || description.dirty) && description.invalid">
                     Enter your item details.
                   </div>
                 </div>
