--- a/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
+++ b/lostAndFind-client/src/app/pages/mod-dashboard/mod-dashboard.component.html
@@ -50,26 +50,26 @@
 
             <li>
               <a href [routerLink]="'/mod_dashboard'">
-                  <i class="fa fa-folder"></i>
+                  <i class="fa fa-dashboard"></i>
                   <span>Dashboard</span>
               </a>
           </li>
             <li>
               <a href [routerLink]="'/own_item'">
-                <i class="fa fa-book"></i>
+                <i class="fa fa-plus"></i>
                 <span>New Item</span>
               </a>
             </li>
             <li>
               <a href [routerLink]="'/mod_profile'">
-                <i class="fa fa-calendar"></i>
+                <i class="fa fa-user"></i>
                 <span>Edit profile</span>
               </a>
             </li>
 
             <li>
               <a href [routerLink]="'/complain'">
-                <i class="fa fa-calendar"></i>
+                <i class="fa fa-file-text-o"></i>
                 <span>Complain</span>
               </a>
             </li>
