--- a/lostAndFind-client/src/styles.scss
+++ b/lostAndFind-client/src/styles.scss
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
-@import "~bootstrap/dist/css/bootstrap.min.css";
+// @import "~bootstrap/dist/css/bootstrap.min.css";
+// @import '~bootstrap/dist/css/bootstrap.min.css';
+// @import '~bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 // @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 
 // @import "~bootswatch/dist/cyborg/variables";
 @import "~bootstrap/scss/bootstrap";
+// @import "../node_modules/jquery/dist/jquery.min.js"
 // @import "~bootswatch/dist/cyborg/bootswatch";
 // @import "~https://use.fontawesome.com/releases/v5.0.6/css/all.css" ;
